--- a/src/index.css
+++ b/src/index.css
@@ -11,11 +11,12 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #000000;
   text-decoration: inherit;
+  margin: 10px 0;
 }
 a:hover {
-  color: #535bf2;
+  color: #2a2b3a;
 }
 
 body {
