--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
 }
-.Contenedor{
+.Contenedor, .Inputs{
   display: flex;
   flex: 1;
   flex-direction: column;
@@ -17,4 +17,11 @@
   padding: 10px 15px;
   margin: 10px;
   background-color: chartreuse;
+}
+
+.Inputs input{
+  margin: 8px;
+  border-radius:10px ;
+  height: 25px;
+  width: 300px;
 }
