--- a/src/App.css
+++ b/src/App.css
@@ -20,8 +20,11 @@
 }
 
 .Inputs input{
-  margin: 8px;
   border-radius:10px ;
-  height: 25px;
-  width: 300px;
+  height: 30px;
+  width: 350px;
+}
+.Inputs p{
+  font-size: 20px;
+  font-weight: 500;
 }
