--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
 }
-.Contenedor, .Inputs{
+.Contenedor, .Inputs, .Cursos{
   display: flex;
   flex: 1;
   flex-direction: column;
@@ -16,15 +16,26 @@
   border-radius: 10px;
   padding: 10px 15px;
   margin: 10px;
-  background-color: chartreuse;
+  background-color: rgb(31, 82, 175)
 }
 
 .Inputs input{
+  margin: 5px;
   border-radius:10px ;
-  height: 30px;
-  width: 350px;
+  height: 25px;
+  width: 300px;
 }
 .Inputs p{
-  font-size: 20px;
+  margin: 0;
+  font-size: 18px;
   font-weight: 500;
+}
+
+.Cursos table{
+  background-color: rgb(248, 248, 248);
+  margin: 30px;
+  text-align: center;
+}
+.Cursos table td{
+  padding: 5px;
 }
